Made header of page

--- a/frontend/src/styles/_reset.scss
+++ b/frontend/src/styles/_reset.scss
@@ -16,3 +16,8 @@ html {
 *:before {
     box-sizing: inherit;
 }
+
+body {
+    font-size: 10px;
+    font-family: 'Cabin Condensed', sans-serif;
+}
